--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <img src="{{ url_for('static', filename='bird_icon.png') }}" alt="Bird Icon" class="bird-icon">
         <h1>Bird Detector</h1>
     </header>
     <div class="body">
@@ -19,6 +20,7 @@
             <img id="imagePreview" class="image-preview" alt="Image Preview">
             <div class="loading-spinner" id="loadingSpinner">
                 <div class="spinner"></div>
+                <p class="loading-text">Identifying species...</p>
             </div>
             <h2 id="result"></h2>
         </div>
