--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <img src="{{ url_for('static', filename='bird_icon.png') }}" alt="Bird Icon" class="bird-icon">
-        <h1>Bird Detector</h1>
+        <h1>Bird Species Detection</h1>
     </header>
     <div class="body">
         <div class="container">
@@ -22,7 +22,7 @@
                 <div class="spinner"></div>
                 <p class="loading-text">Identifying species...</p>
             </div>
-            <h2 id="result"></h2>
+            <div id="result"></div>
         </div>
     </div>
 </body>
